added api client module

--- a/DaprSample/HelloWorld/.vscode/launch.json
+++ b/DaprSample/HelloWorld/.vscode/launch.json
@@ -21,6 +21,29 @@
         "EdgeHubConnectionString": "${config:azure-iot-edge.EdgeHubConnectionString}",
         "EdgeModuleCACertificateFile": "${config:azure-iot-edge.EdgeModuleCACertificateFile}"
       }
+    },
+    {
+      "name": "OrdersApiClient Remote Debug (Python)",
+      "type": "python",
+      "request": "attach",
+      "port": 5678,
+      "host": "localhost",
+      "logToFile": true,
+      "redirectOutput": true,
+      "pathMappings": [
+        {
+          "localRoot": "${workspaceFolder}/modules/OrdersApiClient",
+          "remoteRoot": "/app"
+        }
+      ],
+      "windows": {
+        "pathMappings": [
+          {
+            "localRoot": "${workspaceFolder}\\modules\\OrdersApiClient",
+            "remoteRoot": "/app"
+          }
+        ]
+      }
     }
   ]
 }
