--- a/DaprSample/PubSubRabbitMQ/modules/EventConsumer/components/redis.yaml
+++ b/DaprSample/PubSubRabbitMQ/modules/EventConsumer/components/redis.yaml
@@ -6,6 +6,6 @@ spec:
   type: state.redis
   metadata:
     - name: redisHost
-      value: 127.0.0.1:6379
+      value: Redis:6379
     - name: redisPassword
       value: ""
