- upgraded dapr to 0.8.0 - corrected the statestore url by adding the component name - removed networkconfig, becuase it is not needed anymore - updated the daprd param name app-id and added the component path - updated the component by adding the missing actorstatestore - removed unused pubsub component file

--- a/DaprSample/HelloWorld/modules/OrdersApi/components/redis.yaml
+++ b/DaprSample/HelloWorld/modules/OrdersApi/components/redis.yaml
@@ -5,7 +5,9 @@ metadata:
 spec:
   type: state.redis
   metadata:
-    - name: redisHost
-      value: 127.0.0.1:6379
-    - name: redisPassword
-      value: ""
+  - name: redisHost
+    value: redis:6379
+  - name: redisPassword
+    value: ""
+  - name: actorStateStore
+    value: "true"
